
ModificationSet
----------------------
* Changed ModificationSet to use Progress Signaling API to report when sleeping due to modifications found during Quiet Period.

PVCS
----------------------
* Add support to check for changes against promotion group (CC-717); make thread-safe (CC-583); fix quoting (CC-655).  Patch by Shane Genschaw.

Documentation
======================
* Add missing docs for "timeout" attributes on Maven and Maven2 builders.
* Fix old reference to launch via cruisecontrol.jar (replace with cruisecontrol-launcher.jar) in gettingstartedsroucedist.html. Reported by Xeno Campanoli

reporting
======================

* Fix "Building (since)" time on build summary page to show start of build time (instead of last progress message update time). Fix suggested by EJ Ciramella.
* Show progress message as tooltip over Status cells on build summary page while building. Also show time until next build while waiting.


CruiseControl Release Notes - 2.7.1

general
======================
* Upgraded Ant that is distributed with CruiseControl to Ant version 1.7.0.
* Fix source version cruisecontrol.sh to work with cygwin (CC-694). Patch by Rex Tener.

cc-config
======================
* Fixed cc-config\3rdparty\libsystray4j.so causes build to break on Windows (CC-684). Patch by Brian Egge.
* Updated cruisecontrol's main build to allow setting a proxy prior to downloading and including the cc-config application (CC-687). Patch by Ilkka Laukkanen.

contrib
======================

packager
----------------------
* Fix build root and rpm destination for rpm target. Patch by Joseph Benavidez.
* Init script improvments based on patch by Nicolas Ternisien
* Upgrading a package will no longer overwrite users config
* Packages now depend on Java and subversion
* Package now includes dashboard and cc-config
* Now includes working connectfour sample
* Stops CruiseControl on uninstall
* Now only builds CruiseControl if needed